--- a/css/estilod.css
+++ b/css/estilod.css
@@ -1,6 +1,6 @@
 body
 {
-    color: red;
+    color: #333;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
@@ -39,4 +39,12 @@ body
 #post
 {
     padding: 1em;
+}
+
+#footer
+{
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
 }
